# CalculationEngine

./: .gitignore  README.md  package.json  pyproject.toml
calculation_engine/: db.sqlite3  manage.py
calculation_engine/calculation_engine/: asgi.py  settings.py  urls.py  wsgi.py
calculation_engine/emissions/: models.py  serializers.py  urls.py  views.py
calculation_engine/emissions/migrations/: 0001_initial.py
calculation_engine/emissions/templates/emissions/: emission_factor_list.html
calculation_engine/emissions/utils/: calculation.py  enums.py  generics.py
data/: CSV-Emission-Factors-and-Activity-Data-Air-Travel.csv  CSV-Emission-Factors-and-Activity-Data-Electricity.csv  CSV-Emission-Factors-and-Activity-Data-Emission-Factors.csv  CSV-Emission-Factors-and-Activity-Data-Purchased-Goods-Services.csv
